# smeagl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Core/include/: Game.h  Timer.h  pledGL.h  pledGLbase.h
Core/include/Application/: App.h  Game.h  GameBase.h
Core/include/Graphics/: GraphicsAPI.h  RendererBase.h  SDLRenderer.h
Core/include/Graphics/Renderer/: 2DRenderer.cpp  Buffer.h  Renderer.h  RendererAPI.h  RendererBase.h  SDLRenderer.h  ShaderProgram.h  Texture2D.h  UniformBuffer.h
Core/include/Graphics/Window/: GraphicsAPI.h  GraphicsBase.h  SDLGraphics.h
Core/include/Input/: Keyboard.h
Core/src/: Game.cpp
Core/src/Application/: Game.cpp
Core/src/Graphics/: GraphicsAPI.cpp  RendererBase.cpp  SDLRenderer.cpp
Core/src/Graphics/Renderer/: Buffer.cpp  Renderer.cpp  RendererBase.cpp  SDLGraphics.cpp  SDLRenderer.cpp  ShaderProgram.cpp  Texture2D.cpp  UniformBuffer.cpp
Core/src/Graphics/Window/: GraphicsAPI.cpp  SDLGraphics.cpp
Core/src/Input/: Keyboard.cpp
Demo/include/: DemoApplication.h
Demo/src/: DemoApplication.cpp  Main.cpp
assets/shaders/: frag.shader  vert.shader
include/: Entity.h  Game.h  app2.h
include/Application/: App.h
include/Graphics/: RendererBase.h  SDLRenderer.h
lib/: CMakeLists.txt
pledGL/include/Application/: Game.h  GameBase.h
pledGL/include/Core/: Timer.h  pledGL.h
pledGL/include/Core/Input/: Keyboard.h
pledGL/include/Graphics/Renderer/: Buffer.h  Renderer.h  ShaderProgram.h  Texture2D.h  UniformBuffer.h
pledGL/include/Graphics/Window/: SDLGraphics.h
pledGL/src/Application/: Game.cpp
pledGL/src/Core/Input/: Keyboard.cpp
pledGL/src/Graphics/Renderer/: Buffer.cpp  Renderer.cpp  ShaderProgram.cpp  Texture2D.cpp
pledGL/src/Graphics/Window/: SDLGraphics.cpp
src/: Entity.cpp  Game.cpp  Main.cpp
src/Application/: app2.cpp
src/Graphics/: RendererBase.cpp  SDLRenderer.cpp
